cloudformation.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: Setup for CrumbCommander Application

Parameters:
  VpcCidrBlock:
    Description: CIDR block for the VPC
    Type: String
    Default: "10.0.0.0/16"

Resources:
  VPC:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: !Ref VpcCidrBlock

  PublicSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: "10.0.1.0/24"
      AvailabilityZone: !Select [0, !GetAZs ""]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: "public1"

  PublicSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: "10.0.2.0/24"
      AvailabilityZone: !Select [1, !GetAZs ""]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: "public2"

  PrivateSubnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: "10.0.3.0/24"
      AvailabilityZone: !Select [0, !GetAZs ""]
      Tags:
        - Key: Name
          Value: "private1"

  PrivateSubnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref VPC
      CidrBlock: "10.0.4.0/24"
      AvailabilityZone: !Select [1, !GetAZs ""]
      Tags:
        - Key: Name
          Value: "private2"

  InternetGateway:
    Type: AWS::EC2::InternetGateway

  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref VPC
      InternetGatewayId: !Ref InternetGateway

  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref VPC

  PublicRoute:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: "0.0.0.0/0"
      GatewayId: !Ref InternetGateway

  DevRouteAssos:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref PublicRouteTable
      SubnetId: !Ref PublicSubnet1

  MySQLDB:
    Type: AWS::RDS::DBInstance
    Properties:
      DBName: "CloudProject"
      DBInstanceIdentifier: "CloudProject"
      Engine: "mysql"
      EngineVersion: "8.0"
      DBInstanceClass: "db.t3.micro"
      AllocatedStorage: "20"
      MasterUsername: "root"
      MasterUserPassword: "00000000"
      DBSubnetGroupName: !Ref DBSubnetGroup
      VPCSecurityGroups:
        - !Ref PrivateSecurityGroup

  DBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: "Subnet group for CrumbCommander MySQL DataBase"
      SubnetIds:
        - !Ref PrivateSubnet1
        - !Ref PrivateSubnet2

  CrumbCommanderFrontendInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: "t2.medium"
      ImageId: "ami-06f8dce63a6b60467"
      KeyName: "vockey"
      NetworkInterfaces:
        - AssociatePublicIpAddress: "true"
          DeleteOnTermination: "true"
          DeviceIndex: "0"
          GroupSet:
            - !Ref PublicSecurityGroup
          SubnetId: !Ref PublicSubnet1

      Tags:
        - Key: Name
          Value: "FrontEnd"

  CrumbCommanderBackendInstance:
    Type: AWS::EC2::Instance
    Properties:
      InstanceType: "t2.medium"
      ImageId: "ami-06f8dce63a6b60467"
      KeyName: "vockey"
      NetworkInterfaces:
        - AssociatePublicIpAddress: "true"
          DeleteOnTermination: "true"
          DeviceIndex: "0"
          GroupSet:
            - !Ref PublicSecurityGroup
          SubnetId: !Ref PublicSubnet1
      Tags:
        - Key: Name
          Value: "BackEnd"

  PublicSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security group for public instances"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: "0.0.0.0/0"
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: "0.0.0.0/0"
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: "0.0.0.0/0"

  PrivateSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Security group for private instances"
      VpcId: !Ref VPC
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 3306
          ToPort: 3306
          SourceSecurityGroupId: !Ref PublicSecurityGroup

  SecretManagerSecret:
    Type: AWS::SecretsManager::Secret
    Properties:
      Name: "CrumbCommanderSecrets"
      Description: "Secrets for CrumbCommander Website"
      SecretString: '{"sender_email" = "crumb.commander@gmail.com", "password" = "dkab dctq eqok fbuq"}'

  LambdaFunction:
    Type: AWS::Lambda::Function
    Properties:
      Handler: lambda_function.lambda_handler
      Role: arn:aws:iam::339712993294:role/LabRole
      FunctionName: "ShiftReminderLambda"
      Code:
        S3Bucket: "crumbcommander"
        S3Key: "lambda_function.zip"
      Runtime: python3.8
      VpcConfig:
        SecurityGroupIds:
          - !Ref PrivateSecurityGroup
        SubnetIds:
          - !Ref PrivateSubnet1
          - !Ref PrivateSubnet2

  CPUAlarmTopic:
    Type: AWS::SNS::Topic
    Properties:
      DisplayName: "Excess_CPU_Usage_Alarm"
      Subscription:
        - Endpoint: "tsp57081@gmail.com"
          Protocol: "email"

  CPUUtilizationAlarmFrontend:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmDescription: "Alarm for CPU Utilization exceeding 50% - Frontend"
      Namespace: "AWS/EC2"
      MetricName: "CPUUtilization"
      Dimensions:
        - Name: "InstanceId"
          Value: !Ref CrumbCommanderFrontendInstance
      Statistic: "Average"
      Period: "300"
      EvaluationPeriods: "1"
      Threshold: "50"
      ComparisonOperator: "GreaterThanThreshold"
      AlarmActions:
        - !Ref CPUAlarmTopic

  CPUUtilizationAlarmBackend:
    Type: AWS::CloudWatch::Alarm
    Properties:
      AlarmDescription: "Alarm for CPU Utilization exceeding 50% - Backend"
      Namespace: "AWS/EC2"
      MetricName: "CPUUtilization"
      Dimensions:
        - Name: "InstanceId"
          Value: !Ref CrumbCommanderBackendInstance
      Statistic: "Average"
      Period: "300" # 5 minutes
      EvaluationPeriods: "1"
      Threshold: "50"
      ComparisonOperator: "GreaterThanThreshold"
      AlarmActions:
        - !Ref CPUAlarmTopic
